refactor and restructure code

--- a/src/App/components/MoviesContent/style.scss
+++ b/src/App/components/MoviesContent/style.scss
@@ -9,7 +9,7 @@
   font-weight: bold;
 }
 
-.searchContent {
+.moviesContent {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
